# isc_lab_205_ene_2020

./: CMakeLists.txt
clase3_minunit_cuadratica/: CuadraticaLib.c  CuadraticaLib.h  CuadraticaMain.c  CuadraticaMinunit.c
clase4_minunit_arreglos/: clase4Lib.c  clase4Lib.h  clase4Main.c  clase4Minunit.c
clase5_struct/: struct_lib.c  struct_lib.h  struct_main.c  struct_minunit.c
clase6_punteros/: mainm.c
clase7_archivos/: archivos_lib.c  archivos_lib.h  archivos_main.c  archivos_minunit.c  minuevoarchivo.isc
clase8_tutoria/: a.out  lib_tutoria.c  lib_tutoria.h  main_linea_commando.c  main_tutoria.c  mi_archivo.txt  minunit_tutoria.c
compilar_cmd/: CuadraticaLib.c  CuadraticaLib.h  CuadraticaMain.c  CuadraticaMinunit.c  minunit.h
ejemplos_minunit/: CuadraticaMinunit.c  CuadraticaMinunit_con_1run.c  CuadraticaMinunit_con_run_demas.c  CuadraticaMinunit_sin_run.c
includes/: minunit.h
tareax/: tarea_x_main.cpp
template/: punt4Lib.c  punt4Lib.h  punt4Minunit.c  punto4Main.c
